# pujobot

./: .gitignore  CMakeLists.txt  README.md  ai.c  bitboard.c  demo.c  game.c  lib.c  main.c  screen.c  util.c  wsbridge.py
api/: pujo.h.in
include/pujobot/: ai.h  bitboard.h  game.h  screen.h  util.h
src/: CMakeLists.txt  ai.c  bitboard.c  game.c  screen.c  util.c
test/: CMakeLists.txt  test_effective_lockout.c
